Hopefully last commit

--- a/index.html
+++ b/index.html
@@ -1,12 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Coding Asigment 1</title>
-  </head>
-  <body>
-    Hello Coursera! That's firt commit
-  </body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Coding Asigment 1</title>
+		<link rel="stylesheet" href="css/styles.css" />
+	</head>
+
+	<body>
+		<main class="menu">
+			<header class="menu-header">Our menu</header>
+			<div class="menu-items">
+				<div class="item">
+					<div class="item-header" id="item-header-1">Chicken</div>
+					<div class="item-text">
+						Officia nulla ex exercitation pariatur voluptate sint. Qui magna
+						velit eu elit ut sit in pariatur minim anim eiusmod laboris.
+						Consequat dolor ad laborum cupidatat eu non consequat voluptate qui
+						nulla sunt.
+					</div>
+				</div>
+
+				<div class="item">
+					<div class="item-header" id="item-header-2">Beef</div>
+					<div class="item-text">
+						Laboris est sint exercitation amet irure anim exercitation
+						incididunt exercitation cupidatat ad laborum. Dolor ad eu deserunt
+						laboris proident sint culpa anim. Enim labore laboris officia sint
+						laborum sunt aute esse laboris id.
+					</div>
+				</div>
+
+				<div class="item">
+					<div class="item-header" id="item-header-3">Sushi</div>
+					<div class="item-text">
+						Aliqua voluptate sit adipisicing ipsum eiusmod id do Lorem.
+						Excepteur mollit mollit consequat velit amet adipisicing occaecat
+						anim dolore nulla eu adipisicing. Dolor labore minim elit sit. Quis
+						ullamco quis sit exercitation veniam eiusmod anim commodo amet
+						dolor.
+					</div>
+				</div>
+			</div>
+		</main>
+	</body>
 </html>
