--- a/index.html
+++ b/index.html
@@ -4,46 +4,109 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Coding Asigment 1</title>
+		<title>Coding Asigment 2</title>
+		<link rel="stylesheet" href="css/bootstrap.min.css" />
 		<link rel="stylesheet" href="css/styles.css" />
 	</head>
 
 	<body>
-		<main class="menu">
-			<header class="menu-header">Our menu</header>
+		<header>
+			<nav id="header-nav" class="navbar navbar-default">
+				<div class="container">
+					<div class="navbar-header">
+						<a href="index.html">Food, LLC</a>
 
-			<div class="menu-items">
-				<div class="item">
-					<p class="item-header" id="item-header-1">Chicken</p>
-					<p class="item-text">
-						Officia nulla ex exercitation pariatur voluptate sint. Qui magna
-						velit eu elit ut sit in pariatur minim anim eiusmod laboris.
-						Consequat dolor ad laborum cupidatat eu non consequat voluptate qui
-						nulla sunt.
-					</p>
+						<button
+							type="button"
+							class="navbar-toggle collapsed"
+							data-toggle="collapse"
+							data-target="#collapsable-nav"
+							aria-expanded="false">
+							<span class="sr-only">Toggle navigation</span>
+							<span class="icon-bar"></span>
+							<span class="icon-bar"></span>
+							<span class="icon-bar"></span>
+						</button>
+					</div>
+
+					<div
+						id="collapsable-nav"
+						class="collapse hidden-sm hidden-md hidden-lg">
+						<ul id="nav-list" class="nav navbar-nav navbar-right">
+							<li>
+								<a href="#chicken">
+									<br class="hidden-xs hidden-sm hidden-md" />
+									Chicken
+								</a>
+							</li>
+							<li>
+								<a href="#beef">
+									<br class="hidden-xs hidden-sm hidden-md" />
+									Beef
+								</a>
+							</li>
+							<li>
+								<a href="#sushi">
+									<br class="hidden-xs hidden-sm hidden-md" />
+									Sushi
+								</a>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</nav>
+		</header>
+
+		<main id="menu" class="container">
+			<header id="menu-header" class="text-center">Our menu</header>
+
+			<div class="row">
+				<div class="col-md-4 col-sm-6 col-xs-12">
+					<div id="chicken" class="item">
+						<h3 class="text-center"><b>Chicken</b></h3>
+						<p>
+							Officia nulla ex exercitation pariatur voluptate sint. Qui magna
+							velit eu elit ut sit in pariatur minim anim eiusmod laboris.
+							Consequat dolor ad laborum cupidatat eu non consequat voluptate
+							qui nulla sunt. Mollit sint exercitation exercitation qui duis
+							excepteur. Sunt non id qui amet voluptate excepteur. Labore Lorem
+							occaecat enim sunt ex nostrud sint et fugiat anim ipsum.
+						</p>
+					</div>
 				</div>
 
-				<div class="item">
-					<p class="item-header" id="item-header-2">Beef</p>
-					<p class="item-text">
-						Laboris est sint exercitation amet irure anim exercitation
-						incididunt exercitation cupidatat ad laborum. Dolor ad eu deserunt
-						laboris proident sint culpa anim. Enim labore laboris officia sint
-						laborum sunt aute esse laboris id.
-					</p>
+				<div class="col-md-4 col-sm-6 col-xs-12">
+					<div id="beef" class="item">
+						<h3 class="text-center"><b>Beef</b></h3>
+						<p>
+							Officia nulla ex exercitation pariatur voluptate sint. Qui magna
+							velit eu elit ut sit in pariatur minim anim eiusmod laboris.
+							Consequat dolor ad laborum cupidatat eu non consequat voluptate
+							qui nulla sunt. Mollit sint exercitation exercitation qui duis
+							excepteur. Sunt non id qui amet voluptate excepteur. Labore Lorem
+							occaecat enim sunt ex nostrud sint et fugiat anim ipsum.
+						</p>
+					</div>
 				</div>
 
-				<div class="item">
-					<p class="item-header" id="item-header-3">Sushi</p>
-					<p class="item-text">
-						Aliqua voluptate sit adipisicing ipsum eiusmod id do Lorem.
-						Excepteur mollit mollit consequat velit amet adipisicing occaecat
-						anim dolore nulla eu adipisicing. Dolor labore minim elit sit. Quis
-						ullamco quis sit exercitation veniam eiusmod anim commodo amet
-						dolor.
-					</p>
+				<div class="col-md-4 col-sm-12 col-xs-12">
+					<div id="sushi" class="item">
+						<h3 class="text-center"><b>Sushi</b></h3>
+						<p>
+							Officia nulla ex exercitation pariatur voluptate sint. Qui magna
+							velit eu elit ut sit in pariatur minim anim eiusmod laboris.
+							Consequat dolor ad laborum cupidatat eu non consequat voluptate
+							qui nulla sunt. Mollit sint exercitation exercitation qui duis
+							excepteur. Sunt non id qui amet voluptate excepteur. Labore Lorem
+							occaecat enim sunt ex nostrud sint et fugiat anim ipsum.
+						</p>
+					</div>
 				</div>
 			</div>
 		</main>
+
+		<!-- jQuery (Bootstrap JS plugins depend on it) -->
+		<script src="js/jquery-2.1.4.min.js"></script>
+		<script src="js/bootstrap.min.js"></script>
 	</body>
 </html>
